@@ -8,3 +8,6 @@ Latest version (1.5.1-SNAPSHOT) was upgraded to 1.6 with the following changes
 * use purge_seq as string in DbInfo (as required from CouchdB 2.3.1)
 * update jackson to 2.9.9
 * replaced findbugs with spotbugs
+* Pagination bug fix: Previous page request will now be created properly
+* BREAKING CHANGE - Field "total_rows" is handled as "long" instead of "int"
+
